@@ -104,6 +104,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Lua                    Roberto Rossi
 - m86k                   Benny Baumann
 - mIRC                   Alberto de Areba Sánchez
+- Modula-3               Martin Bishop
 - MPASM                  Bakalex
 - MXML                   David Spurr
 - MySQL                  Carl Fürstenberg, Marjolein Katsma
