@@ -15,6 +15,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 Version 1.0.8.3
   -  Added language files
      * DCS (Stelio Passaris)
+     * Modula-3 (Martin Bishop)
      * Rebol (Lecanu Guillaume)
   -  Improvements to language files (BenBE)
      * Added some missing Perl keywords and obscure default variables (BenBE)
